force-app/main/default/objects/Litmos__LearningPathProgram__c/Litmos__LearningPathProgram__c.object-meta.xml
<CustomObject>
    <label>Learning Path Program</label>
    <nameField>
        <displayFormat>LPProgram-{00000000}</displayFormat>
        <label>LearningPathProgramsID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Path Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>