force-app/main/default/objects/Litmos__LearningPathProgram__c/fields/Litmos__Deleted__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleted</label>
    <type>Checkbox</type>
</CustomField>