force-app/main/default/objects/Litmos__LearningPathProgram__c/fields/Litmos__LearningPathID__c.field-meta.xml
<CustomField>
    <fullName>Litmos__LearningPathID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>LearningPath</label>
    <referenceTo>Litmos__LearningPath__c</referenceTo>
    <relationshipLabel>Learning Path Programs</relationshipLabel>
    <relationshipName>LearningPathPrograms</relationshipName>
    <type>Lookup</type>
</CustomField>