force-app/main/default/objects/Litmos__LearningPathProgram__c/fields/Litmos__ProgramID__c.field-meta.xml
<CustomField>
    <fullName>Litmos__ProgramID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program</label>
    <referenceTo>Litmos__Program__c</referenceTo>
    <relationshipLabel>Learning Path Programs</relationshipLabel>
    <relationshipName>LearningPathPrograms</relationshipName>
    <type>Lookup</type>
</CustomField>